--- a/config/docker-compose.override.yml.example
+++ b/config/docker-compose.override.yml.example
@@ -5,6 +5,7 @@ services:
     build:
       context: .
     volumes:
+      - .:/usr/src/app
       - api_docs:/usr/src/app/public/doc/api
       - brandable_css_brands:/usr/src/app/app/stylesheets/brandable_css_brands
       - bundler:/home/docker/.bundle/
@@ -40,7 +41,7 @@ services:
     environment: &BASE-ENV
       ENCRYPTION_KEY: facdd3a131ddd8988b14f6e4e01039c93cfa0160
       RAILS_ENV: development
-      DISABLE_SPRING: 1
+      APP_DOMAIN: localhost
 
   webpack:
     <<: *BASE
